# user-management-server

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: CD.yml  CI.yml  build_and_push.yml
migrations/2025-05-25-101356_create_users/: down.sql  up.sql
migrations/2025-05-25-101433_create_user_wallet/: down.sql  up.sql
migrations/2025-05-25-101504_create_user_security_logs/: down.sql  up.sql
migrations/2025-05-25-101519_create_otp/: down.sql  up.sql
migrations/2025-06-15-122627_create_user_bank_account/: down.sql  up.sql
migrations/2025-08-08-113104_create_user_jwt_tokens/: down.sql  up.sql
src/: main.rs
src/auth/: auth.rs  jwt_auth.rs  mod.rs  models.rs  otp.rs
src/config/: config.rs  config_scope.rs
src/database/: db.rs  mod.rs  otp_db.rs  token_db.rs  user_bank_account_db.rs  user_db.rs  user_security_log_db.rs  user_wallet_db.rs
src/helpers/: bank_helpers.rs  mod.rs
src/middleware/: mod.rs  security_log.rs
src/models/: mod.rs  models.rs  response.rs  schema.rs
src/routes/: healthz.rs  mod.rs
src/routes/admin/: handle_users.rs  mod.rs
src/routes/users/: profile.rs
src/services/: email_service.rs  mod.rs
src/services/geolocation/: geolocator.rs  mod.rs
src/services/templates/: request_otp.hbs  request_password_reset.hbs  reset_password.hbs
