[package]
name = "user-management-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "rust_decimal"] }
r2d2 = "0.8" 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "chrono", "uuid", "numeric"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
lettre = { version = "0.11.15", features = ["smtp-transport", "builder", "serde"] }
handlebars = "6.3.2"
chrono = { version = "0.4.40", features = ["serde"] }
ipinfo = "3.1.1"
rust_decimal = "1.37.2"
awc = "3.7.0"
rand = "0.9.1"
